Release Notes

* 12/15/2014
  * removed redundant log sending
  * added days to getScriptOfflineRunning

* 12/12/2014
  * killing pending jobs in small chunks to avoid timeout
  * added protection in panda.py for cgi exception

* 12/9/2014
  * changed AtlasAdder so that jobs don't go to transferring if only log
  * removed panda_ddm_relation

* 12/8/2015
  * fixed input duplication check for multiple consumers
  * using DISK for tape prestaging for analysis

* 12/7/2015
  * inroduced jobStatus=closed
  * changed Adder to send notification when --destSE doesn't work


* 12/2/2015
  * added a protection in insertNewJob to avoid duplicated input usage

* 11/30/2015
  * added a protection for late insert of metadata

* 11/26/2015
  * added jobStatus=closed
  * changed Nucleus to remove ATLAS when getting endpoint with spacetoken

* 11/23/2015
  * fixed pseudo files in propagateResult

* current
  * added max/minrss
  * using std by default for jobSeed
  * changed not to reset nooutput when pmerge is done
  * fixed getSiteSpecs not to propagate ddm endpoints to clients
  * added nucleus stuff
  * improved error message when pilot produced a wrong file
  * added changeTaskCputime
  * using Express for urgent or high prio input
  * checking metadata before closing sub datasets to avoid a rucio bug
  * fixed datasetMgr to avoid lookup for nonexistent datasets
  * fixed datasetMgr to take distributed dataset into account
  * fixed for internal merge + zero suppression
  * changed AdderGen and AdderAtlas to treat missing files more properly
  * added allowNoOutput
  * improved checkInputFiles
  * changed copyFileRecord to update JEDI files too
  * diabled inputFileCheck in Adder for pilotRetry
  * fixed propageteResult for killed merging after pmerge incremented attemptNr
  * added RSENotFound
  * patched AdderAtlas for MWT2 PRODDISK
  * added dynamicNumEvents stuff
  * changed checkTaskStatus
  * changed copyFileRecord to work with original or w/o original