@@ -3,6 +3,7 @@ Release Notes
 * 12/15/2014
   * removed redundant log sending
   * added days to getScriptOfflineRunning
+  * fixed dispatcher to release lock in finally
 
 * 12/12/2014
   * killing pending jobs in small chunks to avoid timeout
